iter/03: governance and CLI reference docs
- API-FREEZE: iter 3 surface (Runner, DockerRunner, flag builder).
- ITERATION-LOG: iter 3 entry, in-flight decisions (forced
  --entrypoint=java, embedded-harness mode, feature-gated integration
  test, probe-before-run, OOM detection on exit 137), bilan.
- CHANGELOG: runner trait, DockerRunner, flag builder.
- doc/user/cli-reference.md: skeleton with the subcommand table,
  global options, exit codes; lint subcommand fully documented;
  TODO markers on the iterations to come.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>